# notes-with-rust

./: .env  .gitignore  Cargo.toml  README.md  bk_notes.db  build-release.sh  dummy1.csv  notes.db  notes_export.csv
src/: cipher.rs  main.rs  main_bk_03.rs
src/backup/: main_bk_01.rs  main_bk_02.rs
src/functions/: add_note.rs  delete_note.rs  edit_note.rs  export_to_csv.rs  import_from_csv.rs  init_db.rs  refresh_data.rs  search_notes.rs  show_all_notes.rs  show_notes.rs  utils.rs  view_note_by_id.rs
